crates/ars-components/src/specialized/angle_slider/snapshots/ars_components__specialized__angle_slider__tests__angle_slider_thumb.snap
---
source: crates/ars-components/src/specialized/angle_slider/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).thumb_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "thumb",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "angle-slider",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Angle",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "360",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "135",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "135 degrees",
            ),
        ),
        (
            Role,
            String(
                "slider",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [
        (
            Custom(
                "ars-angle-thumb-rotation",
            ),
            "135deg",
        ),
        (
            Custom(
                "ars-angle-value",
            ),
            "135",
        ),
    ],
}
